# thesis-prototype

./: .gitignore  README.md  main.py  pyproject.toml
src/: resource_utils.py  ui.py
